<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.DetailsActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/size_10dp"
        android:paddingLeft="@dimen/size_5dp"
        android:paddingRight="@dimen/size_5dp">

        <ImageView android:id="@+id/image_view_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxHeight="@dimen/margin_270dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/label_movie"/>

        <TextView android:id="@+id/text_view_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="movie..."
            android:gravity="start|bottom"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"/>

        <View android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_5dp"/>

        <ToggleButton
            android:id="@+id/btn_is_movie_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:button="@drawable/ic_not_fav"
            android:textOff=""
            android:textOn=""/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_5dp"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_label_general_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10dp"
                android:text="@string/label_info"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_label_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_5dp"
                android:layout_marginTop="@dimen/size_5dp"
                android:text="@string/label_release_date"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_general_info" />

            <TextView android:id="@+id/text_view_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10dp"
                android:layout_marginTop="@dimen/size_5dp"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:text="@string/text_release_date"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_release_date"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_general_info" />

            <TextView
                android:id="@+id/text_view_label_average_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_5dp"
                android:layout_marginTop="@dimen/size_5dp"
                android:text="@string/label_average_vote"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_label_release_date" />

            <TextView android:id="@+id/text_view_average_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10dp"
                android:layout_marginTop="@dimen/size_5dp"
                android:textColor="#000000"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:text="@string/text_average_vote"
                app:layout_constraintStart_toEndOf="@+id/text_view_label_average_vote"
                app:layout_constraintTop_toBottomOf="@+id/text_view_release_date" />
        </android.support.constraint.ConstraintLayout>

        <View android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/colorPrimary" />

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/label_description"
            android:paddingTop="@dimen/size_10dp"/>

        <TextView android:id="@+id/text_view_movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/size_5dp"
            android:paddingLeft="@dimen/size_5dp"
            android:paddingRight="@dimen/size_5dp"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:text="@string/text_description"/>

        <View android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TRAILERS"
            android:gravity="start|bottom"
            android:background="@color/cardview_dark_background"
            android:textColor="@color/cardview_light_background"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"/>

        <View android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_5dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailers_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="REVIEWS"
            android:gravity="start|bottom"
            android:background="@color/cardview_dark_background"
            android:textColor="@color/cardview_light_background"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"/>

        <View android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_5dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviews_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_5dp"/>
    </LinearLayout>
</ScrollView>
